--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.476.0",
+    "mongodb": "^6.13.1",
+    "mongodb-memory-server": "^10.1.4",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
